--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <!-- <h5 class="mb-3">Eos kasd eos dolor vero vero, lorem stet diam rebum. Ipsum amet sed vero dolor sea
                     </h5> -->
                     <p>MULTI JAYA TEKNIK adalah perusahaan yang bergerak dibidang IT,Jual Beli,Dan Instalasi.Kami telah memiliki pengalaman yang cukup baik dibidangnya.Kami senantiasa
-                        mementingkan kepuasan konsumer dalam pengerjaan.</p>
+                        mementingkan kepuasan konsumen dalam pengerjaan.</p>
                     <a href="" class="btn btn-secondary font-weight-bold py-2 px-4 mt-2">Learn More</a>
                 </div>
                 <div class="col-lg-4 py-5 py-lg-0" style="min-height: 500px;">
@@ -105,7 +105,7 @@
                 <div class="col-lg-4 py-0 py-lg-5">
                     <h1 class="mb-3">Our Mision</h1>
                     <p>Bersama MULTI JAYA TEKNIK anda mendapatkan pelayanan maksimal.Salah satu tujuan kami
-                        adalah membantu memecahkan masalah yang dialami consumer dalam bidang terkait Komputer,CCTV,AC,Frezeer/Kulkas,Listrik,DLL.
+                        adalah membantu memecahkan masalah yang dialami konsumen dalam bidang terkait Komputer,CCTV,AC,Frezeer/Kulkas,Listrik,DLL.
                     </p>
                     <!-- <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5> -->
                     <a href="" class="btn btn-primary font-weight-bold py-2 px-4 mt-2">Learn More</a>
