--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
             <div class="row">
                 <div class="col-md-6 pb-5">
                     <iframe style="width: 100%; height: 443px;"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.462207861519!2d107.6073387504496!3d-6.954677369996625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e9b211cfc423%3A0x4c9574a2e8b1da04!2sCommodus%20Cafe!5e0!3m2!1sen!2sid!4v1671446733170!5m2!1sen!2sid"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d64289.316782453134!2d111.54088039071988!3d-7.581940883527785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e79bf1dafebe2c1%3A0xb32c0d72cc56f385!2sJl.%20Bugangin%20No.20%2C%20RT.15%2FRW.3%2C%20Area%20Sawah%2C%20Banjarsari%2C%20Kec.%20Madiun%2C%20Kabupaten%20Madiun%2C%20Jawa%20Timur%2063151!5e0!3m2!1sid!2sid!4v1736399999494!5m2!1sid!2sid"
                         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
                 <div class="col-lg-6">
